syntax = "proto3";

package AuthServicePackage;

service AuthServiceRPC {
  rpc getUser(GetUserDto) returns (UserResponseDto) {}

  rpc getToken(GetTokenDto) returns (TokenResponseDto) {}
}

message GetUserDto {
  string authId = 1;
}

message UserResponseDto {
  UserDto user = 1;
}

message GetTokenDto {
  string authId = 1;
}

message TokenResponseDto {
  string accessToken = 1;
  string refreshToken = 2;
}

message UserDto {
  string id = 1;
  string loginId = 2;
  string name = 3;
}
